force-app/main/default/objects/NetSuite_TBA_Credentials__c/fields/Consumer_Secret__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Secret__c</fullName>
    <description>OAuth 1.0a Consumer Secret from the NetSuite Integration Record.</description>
    <label>Consumer Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>