force-app/main/default/objects/NetSuite_TBA_Credentials__c/fields/Token_Id__c.field-meta.xml
<CustomField>
    <fullName>Token_Id__c</fullName>
    <description>OAuth 1.0a Token ID from the NetSuite Access Token.</description>
    <label>Token Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>