force-app/main/default/objects/NetSuite_TBA_Credentials__c/fields/Token_Secret__c.field-meta.xml
<CustomField>
    <fullName>Token_Secret__c</fullName>
    <description>OAuth 1.0a Token Secret from the NetSuite Access Token.</description>
    <label>Token Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>